syntax = "proto3";

service RaftNode {
        rpc RequestVote(VoteArgs) returns (ResultWithTerm);
        rpc AppendEntries(NodeArgs) returns (ResultWithTerm);
        rpc GetLeader(NoArgs) returns (LeaderResp);
        rpc Suspend(DurationArgs) returns (NoArgs);
}

message NoArgs {}

message NodeArgs {
        int32 term = 1;
        int32 node_id = 2;
}

message VoteArgs {
        int32 term = 1;
        int32 node_id = 2;
        int32 llIndex = 3;
        int32 llTerm = 4;
}

message ResultWithTerm {
        int32 term = 1;
        bool result = 2;
}

message DurationArgs {
        int32 duration = 1;
}

message LeaderResp {
        int32 leader_id = 1;
        string leader_addr = 2;
}
